添加开发依赖包

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,9 @@
 	"require": {
 		"php": ">=7.1.0"
 	},
+	"require-dev": {
+		"w7/rangine": "dev-master"
+	},
 	"autoload": {
 		"psr-4": {
 			"W7\\Crontab\\": "Src/"
