--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
 	"license": "Apache-2.0",
 	"require": {
 		"php": ">=7.1.0",
-		"w7/rangine": "~2.0"
+		"w7/rangine": "*"
 	},
 	"require-dev": {
 		"w7/php-cs-fixer": "^1.0"
