--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 	"license": "Apache-2.0",
 	"require": {
 		"php": ">=7.1.0",
-		"w7/rangine": "*"
+		"w7/rangine": "*",
+		"dragonmantank/cron-expression": "^2.2"
 	},
 	"require-dev": {
 		"w7/php-cs-fixer": "^1.0"
