添加单元测试

--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,12 @@
 		"dragonmantank/cron-expression": "^2.2"
 	},
 	"require-dev": {
-		"w7/php-cs-fixer": "^1.0"
+		"w7/php-cs-fixer": "^1.0",
+		"phpunit/phpunit": "^8.0"
 	},
 	"autoload": {
 		"psr-4": {
+			"W7\\Crontab\\Tests\\" : "tests/",
 			"W7\\Crontab\\": "src/"
 		}
 	},
